@@ -381,7 +381,7 @@ if (!is_bool ($planetinfo) && $planetinfo != false )
         {
             // Transfer menu
             global $l_planet;
-            $free_holds = NUM_HOLDS ($playerinfo['hull']) - $playerinfo['ship_ore'] - $playerinfo['ship_organics'] - $playerinfo['ship_goods'] - $playerinfo['ship_colonists'];
+            $free_holds = \bnt\CalcLevels::Holds ($playerinfo['hull'], $level_factor) - $playerinfo['ship_ore'] - $playerinfo['ship_organics'] - $playerinfo['ship_goods'] - $playerinfo['ship_colonists'];
             $free_power = NUM_ENERGY ($playerinfo['power']) - $playerinfo['ship_energy'];
             $l_planet_cinfo = str_replace ("[cargo]", NUMBER ($free_holds), $l_planet_cinfo);
             $l_planet_cinfo = str_replace ("[energy]", NUMBER ($free_power), $l_planet_cinfo);
