@@ -63,7 +63,7 @@ else
 }
 
 $holds_used = $playerinfo['ship_ore'] + $playerinfo['ship_organics'] + $playerinfo['ship_goods'] + $playerinfo['ship_colonists'];
-$holds_max = NUM_HOLDS ($playerinfo['hull']);
+$holds_max = \bnt\CalcLevels::Holds ($playerinfo['hull'], $level_factor);
 $armor_pts_max = NUM_ARMOR ($playerinfo['armor']);
 $ship_fighters_max = NUM_FIGHTERS ($playerinfo['computer']);
 $torps_max = NUM_TORPEDOES ($playerinfo['torp_launchers']);
